--- a/pdfprint/requirements.txt
+++ b/pdfprint/requirements.txt
@@ -1,16 +1,20 @@
-apparmor==4.0.3
-attrs==23.2.1.dev0
-cffi==1.17.1
-cryptography==44.0.1
-filelock==3.17.0
-legacy-cgi==2.6.2
-LibAppArmor==4.0.3
-meson==1.7.0
+annotated-types==0.7.0
+anyio==4.8.0
+certifi==2025.1.31
+distro==1.9.0
+h11==0.14.0
+httpcore==1.0.7
+httpx==0.28.1
+idna==3.10
+jiter==0.8.2
+openai==1.65.1
 packaging==24.2
-pycairo==1.27.0
-pycparser==2.22
-PyGObject==3.50.0
-ranger-fm==1.9.4
-Reflector==2023.6.28.0.36.1
+pdf2image==1.17.0
+pillow==11.1.0
+pydantic==2.10.6
+pydantic_core==2.27.2
+PyPDF2==3.0.1
+pytesseract==0.3.13
+sniffio==1.3.1
 tqdm==4.67.1
-wheel==0.45.0
+typing_extensions==4.12.2
